--- a/events.css
+++ b/events.css
@@ -17,7 +17,7 @@ nav{
   width: 100%;
   height: 10%;
   text-align: center;
-  padding: 10px;
+  padding: 15px;
   font-size: 25px;
 }
 
@@ -68,8 +68,6 @@ display: block;
   padding: 20px;
 }
 
-
-
 .modal {
     display: none; /* Hidden by default */
     position: fixed; /* Stay in place */
@@ -91,6 +89,7 @@ display: block;
   width: 50%;
 }
 
-.imageStore{
-
+select{
+float: right;
+width: 200px;
 }
