--- a/events.css
+++ b/events.css
@@ -36,7 +36,6 @@ nav:focus {
 }
 
 /* adding effect to container*/
-
 .container {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
@@ -44,7 +43,6 @@ nav:focus {
 }
 
 /* adding effect to div */
-
 .container div {
   background-color: wheat;
   padding: 10px;
@@ -108,6 +106,7 @@ button:focus {
   border: 1px solid #888;
   width: 70%;/* Could be more or less, depending on screen size */
   height: 70%;
+  position: relative;
 }
 
 /* design for x */
@@ -115,9 +114,10 @@ button:focus {
   padding-left: 7px;
   padding-right: 7px;
   color: #aaa;
-  float: right;
+  float: left;
   font-size: 38px;
   font-weight: bold;
+  z-index: 5;
 }
 
 .cancel:hover,
@@ -127,29 +127,21 @@ button:focus {
   cursor: pointer;
 }
 
-
-/* flex-box */
-.flex-container {
-  display: flex;
-}
-
 /* image inside modal */
-#img-container {
-  display: flex;
-  flex: 40%;
-  flex-direction: column;
+.modal-content > #img-container {
+  display: inline;
   height: 100%;
-  width: 63%;
-  justify-content: flex-start;
+  width:100%;
 }
+
 
 /* map */
-#map-container {
-  display: flex;
-  flex-direction: column;
-  flex: 40%;
-  height: 100%;
-  width: 15%;
+#map-container iframe {
+  position: absolute;
+  top:0;
+  right: 0;
+  z-index: 5;;
+
 }
 
 /* select by category */
