--- a/views/template/nav.ejs
+++ b/views/template/nav.ejs
@@ -1,22 +1,27 @@
-
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-    <a class="navbar-brand" href="#">PhotoApp</a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-  
-    <div class="collapse navbar-collapse" id="navbarSupportedContent">
-      <ul class="navbar-nav mr-auto">
-        <li class="nav-item active">
-          <a class="nav-link viewBut" href="/">Home <span class="sr-only">(current)</span></a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link addBut" href="/form">Add</a>
-        </li>
-      </ul>
-      <div class="sorting">
-        <span class='sort'>Search</span>
-        <select class="select"></select>
-      </div>
+  <a class="navbar-brand" href="#">PhotoApp</a>
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
+    aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+
+  <div class="collapse navbar-collapse" id="navbarSupportedContent">
+    <ul class="navbar-nav mr-auto">
+      <li class="nav-item active">
+        <a class="nav-link viewBut" href="/">Home
+          <span class="sr-only">(current)</span>
+        </a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link addBut" href="/form">Add</a>
+      </li>
+    </ul>
+    <div class="nav-item">
+        <a class="nav-link resister" href="/register">Register</a>
     </div>
-  </nav>
+    <div class="nav-item">
+      <a class="nav-link login" href="/login">Login</a>
+    </div>
+  </div>
+</nav>
+
