--- a/views/updates.ejs
+++ b/views/updates.ejs
@@ -1,26 +1,27 @@
 <!DOCTYPE html>
 <html>
 <% include ./template/header.ejs %>
-<body>
+
+    <body>
         <% include ./template/nav.ejs %>
-    <form method="put" enctype="multipart/form-data"  >
-        <input type="hidden" name="id" id="id" value="">
-          <label>Title:</label>
-          </br>
-          <input type="String" id="title" name="title" value="">
-          </br>
-          <label>Category:</label>
-          <br>
-          <input type="String" id="category" name="category" value="">
-          </br>
-          <input type="hidden" id="coordinates" name="coordinates" value="" >
-          <br>
-          </br>
-          <input type="file" id="imageupload"  name="imageupload" value=""/>
-          </br>
-          </br>
-          <button type="submit" name="edit">Submit</button>
-      </form>
-</body> 
-</body>
+            <form method="PUT"  enctype="multipart/form-data" >
+                <input type="hidden" name="id" id="id" value="">
+                <label>Title:</label>
+                </br>
+                <input type="String" id="title" name="title" value="">
+                </br>
+                <label>Category:</label>
+                <br>
+                <input type="String" id="category" name="category" value="">
+                </br>
+                <input type="hidden" id="coordinates" name="coordinates" value="">
+                <br>
+                </br>
+                <input type="file" id="imageupload" name="imageupload" value="" />
+                </br>
+                </br>
+                <button type="submit" name="edit">Submit</button>
+            </form>
+    </body>
+    <script src="update.js"></script>
 </html>
