--- a/views/template/header.ejs
+++ b/views/template/header.ejs
@@ -5,5 +5,5 @@
   <title>PhotoApp</title>
   <link rel="stylesheet" content="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
     crossorigin="anonymous">
-  <link rel="stylesheet" content="text/css" href="events.css" />
+  <link rel="stylesheet" content="text/css" rel="stylesheet" href="/css/events.css" />
 </head>
